--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -2,18 +2,20 @@
 
 <h3>Payments for <%=@loan.code%></h3>
 
-<%= link_to 'Add Payment', new_loan_payment_path(@loan), class: "btn btn-primary" %>
+<% if @loan.status_id == 1 %>
+<%= link_to t('payment.add_payment'), new_loan_payment_path(@loan), class: "btn btn-primary"  %>
+<% end %>
 
 <div class="table-responsive">
   <table class="table table-hover table-sm">
     <thead>
     <tr>
       <th scope="col">#</th>
-      <th scope="col">Date</th>
-      <th scope="col">Amount</th>
-      <th scope="col">Profit</th>
-      <th scope="col">Payment</th>
-      <th scope="col">Status</th>
+      <th scope="col"><%=t('payment.table.date')%></th>
+      <th scope="col"><%=t('payment.table.amount')%></th>
+      <th scope="col"><%=t('payment.table.profit')%></th>
+      <th scope="col"><%=t('payment.table.payment')%></th>
+      <th scope="col"><%=t('payment.table.status')%></th>
       <th colspan="3"></th>
     </tr>
     </thead>
@@ -26,8 +28,8 @@
         <td><%= number_to_currency(payment.profit) %></td>
         <td><%= number_to_currency(payment.payment_to_borrowed) %></td>
         <td><%= payment.status.name %></td>
-        <td><%= link_to 'Edit', edit_loan_payment_path(@loan,payment) %></td>
-        <td><%= link_to 'Destroy Pyment', [@loan, payment], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to t('payment.edit'), edit_loan_payment_path(@loan,payment) %></td>
+        <td><%= link_to t('payment.destroy_payment'), [@loan, payment], method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
      <% end %>
     </tbody>
