--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -13,7 +13,7 @@
     </div>
   <% end %>
 
-  <h3><%= @loan.code %></h3>
+  <h3><%= @loan.code %> <%= @loan.user.complete_name%></h3>
 
   <div class="row">
     <div class="form-group col-md">
