--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,3 +19,11 @@
     padding: 15px;
     margin: 0 auto;
 }
+
+.loading{
+   background-image: image-url('loading.svg');
+   background-size: 50px;
+   display: inline;
+   width: 50px;
+   height:50px;
+}
