Add list view and best control

--- a/app/views/creditors/_modal.html.erb
+++ b/app/views/creditors/_modal.html.erb
@@ -1,9 +1,9 @@
 <!-- Button trigger modal -->
-<button id="launchModalBtn" type="button" class="btn btn-primary d-none" data-toggle="modal" data-target="#exampleModalCenter">
+<button id="launchModalBtn" type="button" class="btn btn-primary d-none" data-toggle="modal" data-target="#modalAddPayment">
   Launch demo modal
 </button>
 <!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<div class="modal fade" id="modalAddPayment" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
