--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -1,6 +1,6 @@
 
 
-<%= form_with(model: [@loan, @payment], local: true) do |form| %>
+<%= form_with(model: [@loan, @payment] ) do |form| %>
   <% if payment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(payment.errors.count, "error") %> prohibited this payment from being saved:</h2>
